Interaccion inicial con "evitar escaleras"